examples/invalid_typed_messages/duplicate_field.argx
module invalid.duplicate_field
type Message { value: string value: bool }
